--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+ 
+# env files
+**/*.env
+
+# debug files
+__debug*
+
+.vscode
