Go File change watcher added

--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -18,8 +18,8 @@ services:
       - dev.env
     ports: 
       - "8080:8080"
-    # volumes:
-    #   - ./app:.
+    volumes:
+      - ./app:/app
     depends_on:
       - db
 
