--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,23 +4,19 @@ services:
   db:
     container_name: 'db'
     image: postgres:latest
-    ports:
-    - 54320:5432
     env_file:
-      - dev.env
+      - .env
     volumes:
     - db_data:/var/lib/postgresql/data
   app:
     build: 
       context: "."
-      dockerfile: ".Dockerfile.dev"
-    image: "dev_app"
+      dockerfile: ".Dockerfile"
+    image: "static_app"
     env_file:
-      - dev.env
+      - .env
     ports: 
       - "8080:8080"
-    volumes:
-      - ./app:/app
     depends_on:
       - db
 
